# pman

./: README.md  pyproject.toml
src/pman/: __init__.py  main.py
src/pman/_cli/: cli.py  util.py
src/pman/_cli/atomic/: git.py  uv.py
src/pman/_core/: cmd.py
src/pman/cli/: cli.py  commands.py
src/pman/core/: cmd.py  util.py
src/pman/core/builtin/: git.py  uv.py
tests/: test_pman.py
