[project]
name = "pman"
version = "0.1.0"
description = "A cli tool for easier project management with git and uv 😎"
readme = "README.md"
authors = [
    { name = "fburleson", email = "joelburleson0104@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.2",
    "rich>=15.0.0",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "conventional-pre-commit>=4.4.0",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[project.scripts]
pman = "pman.main:pman"

